# src/controllers/invoices.controller.ts
@@ -1,4 +1,4 @@
-import { Controller, Route, Get, Path } from 'tsoa'
+import { Controller, Route, Get, Path, Example, Tags, SuccessResponse, OperationId,  } from 'tsoa'
 import { CalculationService } from '../services/calculation.service'
 import { Invoice } from '../models'
 
@@ -12,6 +12,9 @@ export class InvoicesController extends Controller {
   }
 
   @Get(':id/Calculate')
+  @OperationId('Calculate Invoice')
+  @Tags('Invoices')
+  @SuccessResponse(200, 'Invoice total calculated', typeof Invoice)
   public async calculate(@Path('id') id: string): Promise<Invoice | null> {
     return this.calculationService.calculateInvoiceTotal(id)
   }
